[I3] Display chosen workspace on current output

--- a/i3.conf
+++ b/i3.conf
@@ -101,15 +101,15 @@ bindsym $mod+Ctrl+Right move workspace to output right
 
 
 # switch to workspace
-bindsym $mod+ampersand workspace 1
-bindsym $mod+eacute workspace 2
-bindsym $mod+quotedbl workspace 3
-bindsym $mod+apostrophe workspace 4
-bindsym $mod+parenleft workspace 5
-bindsym $mod+minus workspace 6
-bindsym $mod+egrave workspace 7
-bindsym $mod+underscore workspace 8
-bindsym $mod+a workspace 9
+bindsym $mod+ampersand exec --no-startup-id ~/.config/i3/switch-workspace.py 1
+bindsym $mod+eacute exec --no-startup-id ~/.config/i3/switch-workspace.py 2
+bindsym $mod+quotedbl exec --no-startup-id ~/.config/i3/switch-workspace.py 3
+bindsym $mod+apostrophe exec --no-startup-id ~/.config/i3/switch-workspace.py 4
+bindsym $mod+parenleft exec --no-startup-id ~/.config/i3/switch-workspace.py 5
+bindsym $mod+minus exec --no-startup-id ~/.config/i3/switch-workspace.py 6
+bindsym $mod+egrave exec --no-startup-id ~/.config/i3/switch-workspace.py 7
+bindsym $mod+underscore exec --no-startup-id ~/.config/i3/switch-workspace.py 8
+bindsym $mod+a exec --no-startup-id ~/.config/i3/switch-workspace.py 9
 
 # move focused container to workspace
 bindsym $mod+Shift+ampersand move container to workspace 1
