--- a/i3.conf
+++ b/i3.conf
@@ -133,8 +133,8 @@ bindsym $mod+Ctrl+space exec --no-startup-id i3lock -c 333333
 
 # volume
 bindsym XF86AudioMute exec --no-startup-id "amixer set Master toggle"
-bindsym XF86AudioRaiseVolume exec --no-startup-id "amixer sset Master 2+"
-bindsym XF86AudioLowerVolume exec --no-startup-id "amixer sset Master 2-"
+bindsym XF86AudioRaiseVolume exec --no-startup-id "amixer -q sset Master 3%+"
+bindsym XF86AudioLowerVolume exec --no-startup-id "amixer -q sset Master 3%-"
 
 # screenshot
 bindsym Print exec --no-startup-id "gnome-screenshot -i"
