--- a/local.yml
+++ b/local.yml
@@ -432,6 +432,11 @@
         dest: ~/.xsessionrc
         line: "mkdir -p /tmp/Downloads"
 
+    - name: Add tool displaying network status in trayer in xsession
+      lineinfile:
+        dest: ~/.xsessionrc
+        line: "nm-applet &"
+
     - name: Download Postman
       tags: postman
       command: curl -o /tmp/postman.tar.gz https://dl.pstmn.io/download/latest/linux64
