[I3] Make gitk window always floating

--- a/i3.conf
+++ b/i3.conf
@@ -30,6 +30,23 @@ font pango:monospace 8
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
+# Some window are floating by default
+# -- className :	
+# --   xprop | grep WM_CLASS	
+# --   cliquer sur la fenetre	
+# --   Deuxième String	
+# -- appName :	
+# --   xprop | grep WM_CLASS	
+# --   cliquer sur la fenetre	
+# --   Première String	
+# -- title :	
+# --   xprop | grep WM_NAME	
+# --   cliquer sur la fenetre	
+# -- role :	
+# --   xprop | grep WM_WINDOW_ROLE	
+# --   cliquer sur la fenetre
+for_window [class="Gitk"] floating enable
+
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
 
