--- a/i3.conf
+++ b/i3.conf
@@ -186,5 +186,6 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+  position top
+  status_command ~/.config/my3status/wrapper.sh
 }
