[I3] Add shortkey to focus other monitor

--- a/i3.conf
+++ b/i3.conf
@@ -111,9 +111,15 @@ bindsym $mod+q focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+
+# focus other monitor
+bindsym $mod+Ctrl+Left focus output left
+bindsym $mod+Ctrl+Right focus output right
+
+
 # move current workspace to other monitor
-bindsym $mod+Ctrl+Left move workspace to output left
-bindsym $mod+Ctrl+Right move workspace to output right
+bindsym $mod+Shift+Ctrl+Left move workspace to output left
+bindsym $mod+Shift+Ctrl+Right move workspace to output right
 
 
 # switch to workspace
