Autolock screen after 1 minute idle

--- a/i3.conf
+++ b/i3.conf
@@ -152,6 +152,8 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 # lock screen
 bindsym $mod+Ctrl+space exec --no-startup-id i3lock -c 333333
+# auto lock screen after 1 minute idle
+exec xautolock -time 1 -locker 'i3lock -c 333333' &
 
 # volume
 bindsym XF86AudioMute exec --no-startup-id "amixer set Master toggle"
