[I3] Make workspace3 tabbed by default

--- a/i3.conf
+++ b/i3.conf
@@ -99,6 +99,9 @@ bindsym $mod+s layout stacking
 bindsym $mod+t layout tabbed
 bindsym $mod+e layout toggle split
 
+# default workspaces layouts
+for_window [workspace=3] layout tabbed
+
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 
