[I3] Change shortkey to make window floating

--- a/i3.conf
+++ b/i3.conf
@@ -103,10 +103,10 @@ bindsym $mod+e layout toggle split
 for_window [workspace=3] layout tabbed
 
 # toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+space floating toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+bindsym $mod+Shift+space focus mode_toggle
 
 # focus the parent container
 bindsym $mod+q focus parent
