--- a/i3.conf
+++ b/i3.conf
@@ -16,6 +16,11 @@ set $mod Mod4
 # is used in the bar {} block below.
 font pango:monospace 8
 
+# Default colors at https://i3wm.org/docs/userguide.html#_changing_colors
+# class                 border  backgr. text    indicator child_border
+client.unfocused        #999999 #222222 #888888 #292d2e   #222222
+
+
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
