[Install] Fix destination path for Xmodmap

--- a/local.yml
+++ b/local.yml
@@ -399,7 +399,7 @@
     - name: Copy XmodMap config
       file:
         src: "{{ script_dir }}/.Xmodmap"
-        dest: ~∕.Xmodmap
+        dest: ~/.Xmodmap
         state: link
 
     - name: Install i3
