--- a/local.yml
+++ b/local.yml
@@ -397,10 +397,16 @@
         state: link
 
     - name: Copy XmodMap config
+      tags: xmodmap
       file:
         src: "{{ script_dir }}/.Xmodmap"
         dest: ~/.Xmodmap
         state: link
+
+    - name: Refresh xmodmap
+      tags: xmodmap
+      shell:
+        cmd: xmodmap ~/.Xmodmap
 
     - name: Install i3
       become: yes
