--- a/i3.conf
+++ b/i3.conf
@@ -161,7 +161,7 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 # lock screen
 bindsym $mod+Ctrl+space exec --no-startup-id i3lock -c 333333
 # auto lock screen after few minute idle
-exec xautolock -time 2 -locker 'i3lock -c 333333' &
+exec xautolock -corners -000 -time 2 -locker 'i3lock -c 333333' &
 
 # volume
 bindsym XF86AudioMute exec --no-startup-id "amixer set Master toggle"
