[I3] Start some apps on startup + bind some apps to workspaces

--- a/i3.conf
+++ b/i3.conf
@@ -51,6 +51,23 @@ floating_modifier $mod
 # --   xprop | grep WM_WINDOW_ROLE	
 # --   cliquer sur la fenetre
 for_window [class="Gitk"] floating enable
+for_window [class="Peek"] floating enable
+
+
+# binding some apps with workspaces
+assign [class="Google-chrome"] 1
+assign [class="^jetbrains"] 3
+assign [class="Slack"] 9
+assign [class="zoom"] 9
+assign [class="Postman"] 4
+
+
+# start apps on i3 startup
+exec google-chrome-stable
+exec i3-sensible-terminal
+exec jetbrains-toolbox
+exec slack
+
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
@@ -171,7 +188,6 @@ bindsym XF86AudioLowerVolume exec --no-startup-id "amixer -q sset Master 3%-"
 # screenshot
 bindsym Print exec --no-startup-id "gnome-screenshot -i"
 
-for_window [class="Peek"] floating enable
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
