[I3] Add key binding to make window sticky

--- a/i3.conf
+++ b/i3.conf
@@ -78,6 +78,10 @@ bindsym $mod+Shift+c kill
 # start dmenu (a program launcher)
 bindcode $alt+69 exec dmenu_run # Alt + F3
 
+# make current window sticky (displayed on all workspaces)
+# note: this works only if window is floating
+bindsym $mod+Shift+s sticky toggle
+
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
