Install Flameshot for screenshots

--- a/i3.conf
+++ b/i3.conf
@@ -184,7 +184,9 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id "amixer -q sset Master 3%+"
 bindsym XF86AudioLowerVolume exec --no-startup-id "amixer -q sset Master 3%-"
 
 # screenshot
-bindsym Print exec --no-startup-id "gnome-screenshot -i"
+bindsym Print exec --no-startup-id "flameshot gui"
+# screenshot after 2 seconds delay
+bindsym Ctrl+Print exec --no-startup-id "flameshot gui -d 2000"
 
 
 # resize window (you can also use the mouse for that)
