--- a/local.yml
+++ b/local.yml
@@ -57,16 +57,6 @@
         name: gnome-settings-daemon
         state: present
 
-    - name: Retrieve gnome sound file
-      stat:
-        path: /usr/share/sounds/freedesktop/stereo/camera-shutter.oga
-      register: gnome_sound_file
-
-    - name: Mute Gnome screenshot tools
-      become: yes
-      command: mv /usr/share/sounds/freedesktop/stereo/camera-shutter.oga /usr/share/sounds/freedesktop/stereo/camera-shutter-disabled.oga
-      when: gnome_sound_file.stat.exists
-
     - name: Install Git
       become: yes
       apt:
@@ -487,6 +477,12 @@
         name: yarn
         state: present
 
+    - name: Install Flameshot (Screenshot tool)
+      become: yes
+      apt:
+        name: flameshot
+        state: present
+
     - name: Install Peek (screen recorder)
       become: yes
       apt:
@@ -503,18 +499,6 @@
       become: yes
       apt:
         name: 'gimp'
-        state: present
-
-    - name: Install lightweight image editor
-      become: yes
-      apt:
-        name: 'kolourpaint4'
-        state: present
-
-    - name: Install Imagemagick
-      become: yes
-      apt:
-        name: imagemagick
         state: present
 
     - name: Install Xournal (PDF editor)
