--- a/i3.conf
+++ b/i3.conf
@@ -182,6 +182,7 @@ exec xautolock -corners -000 -time 2 -locker 'i3lock -c 333333' &
 bindsym XF86AudioMute exec --no-startup-id "amixer set Master toggle"
 bindsym XF86AudioRaiseVolume exec --no-startup-id "amixer -q sset Master 3%+"
 bindsym XF86AudioLowerVolume exec --no-startup-id "amixer -q sset Master 3%-"
+bindsym $alt+XF86AudioMute exec --no-startup-id "amixer set Capture toggle"
 
 # screenshot
 bindsym Print exec --no-startup-id "flameshot gui"
