Use xcompmgr to handle transparent windows
Transparent windows are needed:
- for zoom annotation mode
- for peek tool

--- a/i3.conf
+++ b/i3.conf
@@ -67,6 +67,7 @@ exec google-chrome-stable
 exec i3-sensible-terminal
 exec jetbrains-toolbox
 exec slack
+exec --no-startup-id xcompmgr & # xcompmgr is a composite manager. Allows 'annotate' feature to work on Zoom
 
 
 # start a terminal
@@ -220,6 +221,6 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
   position top
-  status_command ~/.config/my3status/wrapper.sh
+  status_command ~/.config/my3status/wrapper.sh -t
   tray_output primary
 }
