Prevent screen lock if mouse in bottom right corner

--- a/i3.conf
+++ b/i3.conf
@@ -177,7 +177,11 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 # lock screen
 bindsym $mod+Ctrl+space exec --no-startup-id i3lock -c 333333
 # auto lock screen after few minute idle
-exec xautolock -corners -000 -time 2 -locker 'i3lock -c 333333' &
+# corners: 
+#    0   no specific behavior
+#    -   do not lock.
+#    order: top left, top right, bottom left, bottom right
+exec xautolock -corners -00- -time 2 -locker 'i3lock -c 333333' &
 
 # volume
 bindsym XF86AudioMute exec --no-startup-id "amixer set Master toggle"
