[I3] Make amixer controls name dynamic

--- a/i3.conf
+++ b/i3.conf
@@ -184,10 +184,10 @@ bindsym $mod+Ctrl+space exec --no-startup-id i3lock -c 333333
 exec xautolock -corners -00- -time 2 -locker 'i3lock -c 333333' &
 
 # volume
-bindsym XF86AudioMute exec --no-startup-id "amixer set Master toggle"
-bindsym XF86AudioRaiseVolume exec --no-startup-id "amixer -q sset Master 3%+"
-bindsym XF86AudioLowerVolume exec --no-startup-id "amixer -q sset Master 3%-"
-bindsym $alt+XF86AudioMute exec --no-startup-id "amixer set Capture toggle"
+bindsym XF86AudioMute exec --no-startup-id ~/.config/i3/volume.sh toggle
+bindsym XF86AudioRaiseVolume exec --no-startup-id ~/.config/i3/volume.sh up
+bindsym XF86AudioLowerVolume exec --no-startup-id ~/.config/i3/volume.sh down
+bindsym $alt+XF86AudioMute exec --no-startup-id ~/.config/i3/micro.sh
 
 # screenshot
 bindsym Print exec --no-startup-id "flameshot gui"
