--- a/.gitconfig
+++ b/.gitconfig
@@ -29,11 +29,11 @@
   co = commit -m
   com = commit --amend
   come = commit --amend --no-edit
+  coap = !sh -c \"git add . && git commit -m '$1' && git push\"
   s = number id
   ppik = cherry-pick
   undo = reset HEAD^
   pr = pull --rebase
-  pushmaster = push origin master:aromanet
   mt = mergetool --tool=diffmerge -y
   dt = difftool --tool=diffmerge -y
   a = number add -A
