--- a/local.yml
+++ b/local.yml
@@ -788,6 +788,13 @@
         name: ncdu
         state: present
 
+    - name: Install Ssh shuttle (needed by tools-remote)
+      tags: sshuttle
+      become: yes
+      apt:
+        name: sshuttle
+        state: present
+
     - name: Install network tools (netstat)
       become: yes
       apt:
