[I3] Make zoom windows floating to prevent global freeze

--- a/i3.conf
+++ b/i3.conf
@@ -53,6 +53,14 @@ floating_modifier $mod
 for_window [class="Gitk"] floating enable
 for_window [class="Peek"] floating enable
 
+# Set Zoom notification window to floating with no focus
+for_window [title="^zoom\s?$"] floating enable
+no_focus [title="^zoom\s?$"]
+
+# For meetings that you have joined via a link
+for_window [title="^join\?action=join.*$"] floating enable
+no_focus [title="^join\?action=join.*$"]
+
 
 # binding some apps with workspaces
 assign [class="Google-chrome"] 1
