[I3Bar] Migrate to Java

--- a/i3.conf
+++ b/i3.conf
@@ -233,6 +233,6 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
   position top
-  status_command ~/.config/my3status/wrapper.sh -t
+  status_command exec ~/.config/my3status/wrapper.sh
   tray_output primary
 }
