--- a/local.yml
+++ b/local.yml
@@ -511,10 +511,32 @@
     - name: Copy my3status config files
       tags:
         - i3
+        - my3status
       file:
-        src: "{{ script_dir }}/my3status"
+        src: "{{ script_dir }}/my3status-java"
         dest: ~/.config/my3status
         state: link
+
+    - name: Download GraalVM (Java VM to build native applications)
+      tags:
+        - i3
+        - my3status
+      get_url:
+        url: https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-22.3.2/graalvm-ce-java17-linux-amd64-22.3.2.tar.gz
+        dest: "/tmp/graalvm-java17.tar.gz"
+    - name: Extract GraalVM (Java VM to build native applications)
+      tags:
+        - i3
+        - my3status
+      unarchive:
+        src: "/tmp/graalvm-java17.tar.gz"
+        dest: "{{ dev_dir }}"
+    - name: Add GraalVM in jenv
+      tags:
+        - i3
+        - my3status
+      shell:
+        cmd: "jenv add {{ dev_dir }}/graalvm-ce-java17-22.3.2"
 
     - name: Add apt-key for yarn
       become: yes
